--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
      <p class="up"> & is a connection.</p> <br>
       <p class="down"> Connection between</p>
     </div>
-    <div class="ss">
+<!--     <div class="ss">
       <div class="baya">
        <p>Design <br> Business </p>
        <p>Design <br> Strategy </p>
        <p>Account <br> Business </p>
       </div>
       <div class="daya">&</div>
-    </div>
+    </div> -->
   </body>
 </html>
