--- a/index.html
+++ b/index.html
@@ -28,13 +28,27 @@
      <p class="up"> & is a connection.</p> <br>
       <p class="down"> Connection between</p>
     </div>
-    <div class="ss">
+    <!-- <div class="ss">
       <div class="baya">
        <p>Design <br> Business </p>
        <p>Design <br> Strategy </p>
        <p>Account <br> Business </p>
       </div>
       <div class="daya">&</div>
+    </div> -->
+    <div class="content">
+      <div class="img">
+        <img src="./images/scheme-white.png" alt="">
+      </div>
+      <div class="para">
+        <p>We are a value design branding studio, making design valuable beyond the aesthetics. By applying modular solutions & rigorously extracting deep-seated meaning, we derive customisable identities - one case at a time.</p>
+      </div>
+    </div>
+    <div class="project">
+      <div class="upper">
+        <div class="left"></div>
+        <div class="right"></div>
+      </div>
     </div>
   </body>
 </html>
