--- a/index.html
+++ b/index.html
@@ -29,24 +29,20 @@
       <p class="down"> Connection between</p>
     </div>
 
-<<<<<<< HEAD
-=======
+    <div class="animation">
+      <p class="animate-text">
+          <span class="text-in">Design <br> Strategy</span>
+          <span class="">Audience <br> Business</span>
+          <span class="">Design <br> business</span>
 
-    <!--     <div class="ss">
-=======
-    <!-- <div class="ss">
-=======
->>>>>>> 3dee38974df3a0527a2e28b13190d63b6bb2c996
-<!--     <div class="ss">
->>>>>>> 4d983f263ecd3c38f10a6f2a70859ac71b588a88
->>>>>>> 1e19a837e0fd017a655318b51807187c9406d96a
-      <div class="baya">
-       <p>Design <br> Business </p>
-       <p>Design <br> Strategy </p>
-       <p>Account <br> Business </p>
+      </p>
+      <div class="right-animation">
+          <br>
+          <p>&</p>
       </div>
-      <div class="daya">&</div>
-    </div> -->
+  </div>
+
+
     <div class="content">
       <div class="img">
         <img src="./images/scheme-white.png" alt="">
@@ -61,5 +57,6 @@
         <div class="right"><p>anant</p></div>
       </div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
