--- a/index.html
+++ b/index.html
@@ -73,6 +73,32 @@
         <div class="right"><p>anant</p></div>
       </div>
     </div>
+    <div class="design">
+     <p> Design Initiatives</p>
+     
+
+    </div>
+    <hr>
+    <div class="desig">
+    <div> <p>Andstudio Internship </p></div>
+    <div> <p>Visit-Website</p></div>
+    </div>
+    <hr>
+    <div class="desig">
+    <div> <p>Creative Scouting</p></div>
+    <div> <p>Visit-Website</p></div>
+    </div>
+    <hr>
+    <div class="desig">
+    <div> <p>Studio Exchange</p></div>
+    <div> <p>Visit-Website</p></div>
+    </div>
+    <hr>
+    <div class="desig">
+    <div> <p>The Brand(buy) book </p></div>
+    <div> <p>Visit-Website</p></div>
+    </div>
+   
     <script src="../scripts/index.js"></script>
   </body>
 </html>
