--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     </div>
     <hr>
-    <div class="desig">
+    <div class="desig" >
     <div> <p>Andstudio Internship </p></div>
     <div> <p>Visit-Website</p></div>
     </div>
@@ -98,6 +98,24 @@
     <div> <p>The Brand(buy) book </p></div>
     <div> <p>Visit-Website</p></div>
     </div>
+    <hr>
+  <footer>
+    <div class="foot">
+      <div class="logo">andstudio</div>
+      <div class="message">
+        Let's create something valuable together <br> <br>
+        <span class+="say">say</span> <span class="dash">_______</span> <span class="hello">Hello</span>
+      </div>
+    
+    </div>
+    <div class="last">
+      <p>ALL RIGHTS RESERVED <span style="color:#b2b2b2">&copy; ansdtudio</span></p>
+      <ul>
+        <li><a href="">Instagram</a> &nbsp; &nbsp; &nbsp; <a href="">Facebook</a></li>
+        <li><a href="">Dribble</a> &nbsp; &nbsp; &nbsp;&nbsp;<a class="bb" href="">Behance</a></li>
+      </ul>
+    </div>
+  </footer>
    
     <script src="../scripts/index.js"></script>
   </body>
