--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div class="animation">
       <p class="animate-text">
           <span class="text-in">Design <br> Strategy</span>
-          <span class="">Audience <br> Business</span>
-          <span class="">Design <br> business</span>
+          <span class="text-in">Audience <br> Business</span>
+          <span class="text-in">Design <br> business</span>
 
       </p>
       <div class="right-animation">
