--- a/index.html
+++ b/index.html
@@ -134,22 +134,22 @@
      <p> Design Initiatives</p>
      </div>
     <hr>
-    <div class="desig" >
+    <div class="desig" id="anant" >
     <div> <p>Andstudio Internship </p></div>
     <div> <p>Visit &nbsp;<span class="dash">_______</span>Website</p></div>
     </div>
     <hr>
-    <div class="desig">
+    <div class="desig" id="anant1" >
     <div> <p>Creative Scouting</p></div>
     <div> <p>Visit &nbsp;<span class="dash">_______</span>Website</p></div>
     </div>
     <hr>
-    <div class="desig">
+    <div class="desig" id="anant2" >
     <div> <p>Studio Exchange</p></div>
     <div> <p>Visit &nbsp;<span class="dash">_______</span>Website</p></div>
     </div>
     <hr>
-    <div class="desig">
+    <div class="desig" id="anant3">
     <div> <p>The Brand(buy) book </p></div>
     <div> <p>Visit &nbsp;<span class="dash">_______</span>Website</p></div>
     </div>
@@ -173,5 +173,6 @@
   </footer>
    
     <script src="../scripts/index.js"></script>
+    <script src="../scripts/bg.js"></script>
   </body>
 </html>
