--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <img src="./images/scheme-white.png" alt="">
       </div>
       <div class="para">
-        <p>We are a value design branding studio, making design valuable beyond the aesthetics. By applying modular solutions & rigorously extracting deep-seated meaning, we derive customisable identities - one case at a time.</p>
+        <p>We are a value design branding studio, making design valuable beyond the aesthetics. By applying modular solutions & rigorously extracting deep-seated meaning, we derive customisable identities - one case at a time.
+          <br> <span class="text"> READ <span class="line"></span> MORE </span>
+        </p>
       </div>
     </div>
     <div class="projects">
@@ -157,22 +159,22 @@
     <hr>
     <div class="desig" id="anant" >
     <div> <p>Andstudio Internship </p></div>
-    <div> <p>Visit &nbsp;<span class="dash">_______</span>Website</p></div>
+    <div> <p> <span class="text">Visit &nbsp;<span class="line"></span>Website </span></p></div>
     </div>
     <hr>
     <div class="desig" id="anant1" >
     <div> <p>Creative Scouting</p></div>
-    <div> <p>Visit &nbsp;<span class="dash">_______</span>Website</p></div>
+    <div> <p<span class="text">Visit &nbsp;<span class="line"></span>Website</span></p></div>
     </div>
     <hr>
     <div class="desig" id="anant2" >
     <div> <p>Studio Exchange</p></div>
-    <div> <p>Visit &nbsp;<span class="dash">_______</span>Website</p></div>
+    <div> <p><span class="text">Visit &nbsp;<span class="line"></span>Website</span></p></div>
     </div>
     <hr>
     <div class="desig" id="anant3">
     <div> <p>The Brand(buy) book </p></div>
-    <div> <p>Visit &nbsp;<span class="dash">_______</span>Website</p></div>
+    <div> <p><span class="text">Visit &nbsp;<span class="line"></span>Website</span></p></div>
     </div>
     <hr>
   <footer>
@@ -180,7 +182,7 @@
       <div class="logo">andstudio</div>
       <div class="message">
         Let's create something valuable together <br> <br>
-        <span class="say">say</span> <span class="dash">_______</span> <span class="hello">Hello</span>
+        <span class="say">say</span> <span class="dash">_____</span> <span class="hello">Hello</span>
       </div>
     
     </div>
